--- a/examples/one_or_many_example/Cargo.toml
+++ b/examples/one_or_many_example/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "one_or_many_example"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 sugars_collections = { path = "../../packages/collections" }
