--- a/examples/async_task_example/Cargo.toml
+++ b/examples/async_task_example/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "async_task_example"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
