--- a/packages/async_task/Cargo.toml
+++ b/packages/async_task/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "sugars_async_task"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Async task utilities and abstractions for the cyrup-sugars ecosystem"
+license = "MIT OR Apache-2.0"
+authors = ["David Maple <david@cyrup.ai>"]
+homepage = "https://github.com/cyrup-ai/cyrup-sugars"
+repository = "https://github.com/cyrup-ai/cyrup-sugars"
+documentation = "https://docs.rs/sugars_async_task"
+keywords = ["rust", "utilities", "async", "task", "cyrup"]
+categories = ["asynchronous", "development-tools"]
+readme = "../../README.md"
 
 [lib]
 path = "src/lib.rs"
