--- a/packages/builders/Cargo.toml
+++ b/packages/builders/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "sugars_builders"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Builder pattern utilities and abstractions for the cyrup-sugars ecosystem"
+license = "MIT OR Apache-2.0"
+authors = ["David Maple <david@cyrup.ai>"]
+homepage = "https://github.com/cyrup-ai/cyrup-sugars"
+repository = "https://github.com/cyrup-ai/cyrup-sugars"
+documentation = "https://docs.rs/sugars_builders"
+keywords = ["rust", "builder", "pattern", "utilities", "cyrup"]
+categories = ["development-tools", "data-structures"]
+readme = "../../README.md"
 
 [lib]
 path = "src/lib.rs"
