--- a/packages/gix/Cargo.toml
+++ b/packages/gix/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "sugars_gix"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Git integration utilities for the cyrup-sugars ecosystem"
+license = "MIT OR Apache-2.0"
+authors = ["David Maple <david@cyrup.ai>"]
+homepage = "https://github.com/cyrup-ai/cyrup-sugars"
+repository = "https://github.com/cyrup-ai/cyrup-sugars"
+documentation = "https://docs.rs/sugars_gix"
+keywords = ["rust", "git", "gix", "utilities", "cyrup"]
+categories = ["development-tools", "version-control"]
+readme = "../../README.md"
 
 [lib]
 path = "src/lib.rs"
@@ -10,4 +19,4 @@ path = "src/lib.rs"
 gix-hash = "0.18.0"
 parking_lot = "0.12.4"
 hashbrown = "0.15.4"
-workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
