--- a/packages/async_task/Cargo.toml
+++ b/packages/async_task/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "1.46.1", features = ["rt", "sync"], optional = true }
 futures = "0.3.31"
 parking_lot = { version = "0.12.4", optional = true }
 sugars_collections = { path = "../collections" }
-workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
+# workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
 
 [features]
 default = ["tokio"]
