--- a/packages/cyrup-sugars/Cargo.toml
+++ b/packages/cyrup-sugars/Cargo.toml
@@ -40,7 +40,7 @@ futures = { version = "0.3.31", optional = true }
 parking_lot = { version = "0.12.4", optional = true }
 crossbeam = { version = "0.8.4", optional = true }
 async-channel = { version = "2.5.0", optional = true }
-workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
+# workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full", "test-util"] }
