--- a/packages/gix/Cargo.toml
+++ b/packages/gix/Cargo.toml
@@ -19,4 +19,4 @@ path = "src/lib.rs"
 gix-hash = "0.18.0"
 parking_lot = "0.12.4"
 hashbrown = "0.15.4"
-workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
+# workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
