--- a/packages/async_stream/Cargo.toml
+++ b/packages/async_stream/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sugars_async_stream"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Async stream utilities and abstractions for the cyrup-sugars ecosystem"
-license = "MIT OR Apache-2.0"
-authors = ["David Maple <david@cyrup.ai>"]
-homepage = "https://github.com/cyrup-ai/cyrup-sugars"
-repository = "https://github.com/cyrup-ai/cyrup-sugars"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 documentation = "https://docs.rs/sugars_async_stream"
 keywords = ["rust", "utilities", "async", "stream", "cyrup"]
 categories = ["asynchronous", "development-tools"]
@@ -16,9 +16,9 @@ readme = "../../README.md"
 path = "src/lib.rs"
 
 [dependencies]
-sugars_async_task = { version = "0.2.0", path = "../async_task" }
-sugars_collections = { version = "0.2.0", path = "../collections" }
-tokio = { version = "1.46.1", features = ["rt", "sync", "macros"], optional = true }
+sugars_async_task = { path = "../async_task" }
+sugars_collections = { path = "../collections" }
+tokio = { version = "1.47", features = ["rt", "sync", "macros"], optional = true }
 futures = "0.3.31"
 parking_lot = { version = "0.12.4", optional = true }
 crossbeam = { version = "0.8.4", optional = true }
