--- a/packages/async_task/Cargo.toml
+++ b/packages/async_task/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sugars_async_task"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Async task utilities and abstractions for the cyrup-sugars ecosystem"
-license = "MIT OR Apache-2.0"
-authors = ["David Maple <david@cyrup.ai>"]
-homepage = "https://github.com/cyrup-ai/cyrup-sugars"
-repository = "https://github.com/cyrup-ai/cyrup-sugars"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 documentation = "https://docs.rs/sugars_async_task"
 keywords = ["rust", "utilities", "async", "task", "cyrup"]
 categories = ["asynchronous", "development-tools"]
@@ -19,7 +19,7 @@ path = "src/lib.rs"
 tokio = { version = "1.46.1", features = ["rt", "sync"], optional = true }
 futures = "0.3.31"
 parking_lot = { version = "0.12.4", optional = true }
-sugars_collections = { version = "0.2.0", path = "../collections" }
+sugars_collections = { path = "../collections" }
 # workspace-hack = { version = "0.2.0", path = "../../workspace-hack" }
 
 [features]
