--- a/packages/builders/Cargo.toml
+++ b/packages/builders/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sugars_builders"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Builder pattern utilities and abstractions for the cyrup-sugars ecosystem"
-license = "MIT OR Apache-2.0"
-authors = ["David Maple <david@cyrup.ai>"]
-homepage = "https://github.com/cyrup-ai/cyrup-sugars"
-repository = "https://github.com/cyrup-ai/cyrup-sugars"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 documentation = "https://docs.rs/sugars_builders"
 keywords = ["rust", "builder", "pattern", "utilities", "cyrup"]
 categories = ["development-tools", "data-structures"]
@@ -16,9 +16,9 @@ readme = "../../README.md"
 path = "src/lib.rs"
 
 [dependencies]
-sugars_collections = { version = "0.2.0", path = "../collections" }
-sugars_async_task = { version = "0.2.0", path = "../async_task" }
-sugars_macros = { version = "0.2.0", path = "../macros" }
+sugars_collections = { path = "../collections" }
+sugars_async_task = { path = "../async_task" }
+sugars_macros = { path = "../macros" }
 hashbrown = { version = "0.15.4", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
