--- a/packages/cyrup-sugars/Cargo.toml
+++ b/packages/cyrup-sugars/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "cyrup_sugars"
-version = "0.2.0"
-edition = "2021"
-authors = ["David Maple <david@cyrup.ai>"]
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
 description = "Main crate providing syntactic sugar and utilities for Rust development"
-homepage = "https://github.com/cyrup-ai/cyrup-sugars"
-repository = "https://github.com/cyrup-ai/cyrup-sugars"
+homepage.workspace = true
+repository.workspace = true
 documentation = "https://docs.rs/cyrup_sugars"
-license = "MIT OR Apache-2.0"
-keywords = ["rust", "utilities", "collections", "async", "cyrup"]
+license.workspace = true
+keywords.workspace = true
 categories = ["development-tools", "data-structures"]
 readme = "../../README.md"
 
@@ -25,15 +25,15 @@ crossbeam-async = ["crossbeam", "futures", "async-channel", "sugars_async_stream
 array-tuples = ["sugars_collections/array-tuples"]
 
 [dependencies]
-sugars_collections = { version = "0.2.0", path = "../collections" }
-sugars_async_task = { version = "0.2.0", path = "../async_task" }
-sugars_async_stream = { version = "0.2.0", path = "../async_stream" }
-sugars_macros = { version = "0.2.0", path = "../macros" }
-sugars_gix = { version = "0.2.0", path = "../gix" }
-sugars_builders = { version = "0.2.0", path = "../builders" }
+sugars_collections = { path = "../collections" }
+sugars_async_task = { path = "../async_task" }
+sugars_async_stream = { path = "../async_stream" }
+sugars_macros = { path = "../macros" }
+sugars_gix = { path = "../gix" }
+sugars_builders = { path = "../builders" }
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
-hashbrown = { version = "0.15.4", features = ["serde"], optional = true }
+hashbrown = { version = "0.15", features = ["serde"], optional = true }
 gix-hash = { version = "0.19.0", optional = true }
 tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
 futures = { version = "0.3.31", optional = true }
