--- a/packages/llm/Cargo.toml
+++ b/packages/llm/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sugars_llm"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "LLM integration and AI agent builder utilities"
-license = "MIT OR Apache-2.0"
-authors = ["David Maple <david@cyrup.ai>"]
-homepage = "https://github.com/cyrup-ai/cyrup-sugars"
-repository = "https://github.com/cyrup-ai/cyrup-sugars"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 documentation = "https://docs.rs/sugars_llm"
 keywords = ["rust", "llm", "ai", "builder", "cyrup"]
 categories = ["development-tools", "asynchronous"]
@@ -14,13 +14,13 @@ readme = "../../README.md"
 
 [dependencies]
 # Core async primitives from workspace
-cyrup_sugars = { version = "0.2.0", path = "../cyrup-sugars", features = ["tokio-async", "array-tuples"] }
+cyrup_sugars = { path = "../cyrup-sugars", features = ["tokio-async", "array-tuples"] }
 
 # Macros for array tuple syntax
-sugars_macros = { version = "0.2.0", path = "../macros" }
+sugars_macros = { path = "../macros" }
 
 # Collections for array tuple syntax support
-sugars_collections = { version = "0.2.0", path = "../collections" }
+sugars_collections = { path = "../collections" }
 
 # Async runtime and utilities
 tokio = { version = "1", features = ["full"] }
@@ -31,7 +31,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Collections and data structures
-hashbrown = "0.15.4"
+hashbrown = "0.15"
 
 # HTTP client for API calls
 reqwest = { version = "0.12", features = ["json", "stream"] }
