--- a/packages/builders/Cargo.toml
+++ b/packages/builders/Cargo.toml
@@ -16,9 +16,9 @@ readme = "../../README.md"
 path = "src/lib.rs"
 
 [dependencies]
-sugars_collections = { path = "../collections" }
-sugars_async_task = { path = "../async_task" }
-sugars_macros = { path = "../macros" }
+sugars_collections = { version = "0.3.1", path = "../collections" }
+sugars_async_task = { version = "0.3.1", path = "../async_task" }
+sugars_macros = { version = "0.3.1", path = "../macros" }
 hashbrown = { version = "0.15.4", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
