--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ members = [
     "packages/async_task",
     "packages/builders",
     "packages/collections",
-    "packages/cyrup-sugars",
+    "packages/cyrup-sugars", 
+    "packages/cyrup_release",
     "packages/gix",
     "packages/llm",
     "packages/macros",
