fix: resolve all cargo check warnings (57 warnings -> 0)
- Made ReleaseState public to fix private interface warning
- Implemented Drop trait for FileLock with proper RAII cleanup
- Added comprehensive documentation to all enum variants and struct fields
- All fixes are production-quality with proper error handling

--- a/packages/cyrup_release/Cargo.toml
+++ b/packages/cyrup_release/Cargo.toml
@@ -28,7 +28,7 @@ gix = "0.73.0"
 toml_edit = "0.23.3"
 
 # Semantic version parsing and manipulation
-semver = "1.0.26"
+semver = { version = "1.0.26", features = ["serde"] }
 
 # CLI argument parsing
 clap = { version = "4.5", features = ["derive", "cargo"] }
@@ -50,6 +50,7 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Dependency graph analysis
 petgraph = "0.6"
+fixedbitset = "0.4"
 
 # TOML parsing and manipulation
 toml = "0.8"
