--- a/examples/array_tuple_syntax/Cargo.toml
+++ b/examples/array_tuple_syntax/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sugars-examples"
-version = "0.2.1"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Example implementations demonstrating cyrup_sugars array tuple syntax"
 license = "MIT OR Apache-2.0"
 publish = false
