--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "workspace-hack"
-version = "0.2.1"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Workspace hack for optimizing build times"
 license = "MIT OR Apache-2.0"
 authors = ["David Maple <david@cyrup.ai>"]
