docs: add metadata to example packages
- Added descriptions to all example packages
- Added workspace inheritance for license, authors, homepage, repository
- Eliminates validation warnings for example packages
- Improves package documentation and discoverability

--- a/examples/async_task_example/Cargo.toml
+++ b/examples/async_task_example/Cargo.toml
@@ -2,6 +2,11 @@
 name = "async_task_example"
 version.workspace = true
 edition.workspace = true
+description = "Example demonstrating AsyncTask usage for zero-allocation async operations"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 publish = false
 
 [dependencies]
