--- a/examples/array_tuple_syntax/Cargo.toml
+++ b/examples/array_tuple_syntax/Cargo.toml
@@ -3,7 +3,10 @@ name = "sugars-examples"
 version.workspace = true
 edition.workspace = true
 description = "Example implementations demonstrating cyrup_sugars array tuple syntax"
-license = "MIT OR Apache-2.0"
+license.workspace = true
+authors.workspace = true
+homepage.workspace = true
+repository.workspace = true
 publish = false
 
 [dependencies]
