--- a/packages/cyrup_release/Cargo.toml
+++ b/packages/cyrup_release/Cargo.toml
@@ -21,8 +21,8 @@ name = "cyrup_release"
 path = "src/lib.rs"
 
 [dependencies]
-# Git operations using proven kodegen implementation
-kodegen_tools_git = { path = "/Users/davidmaple/kodegen/packages/tools-git" }
+# Git operations using proven kodegen implementation (now in-workspace as packages/gix)
+sugars_gix = { path = "../gix" }
 
 # Git operations using pure Rust (no CLI)  
 gix = "0.74.0"
